# circulo

./: .cargo_out.txt  .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts
.github/workflows/: status-check.yml
.storybook/: main.ts  preview.ts
.storybook/fixtures/: dashboard.ts  index.ts
contracts/circulo/: Cargo.toml
contracts/circulo/src/: lib.rs
contracts/circulo/test_snapshots/test/: active_circle_cannot_be_cancelled_unilaterally.1.json  draft_cancel_refunds_posted_collateral_atomically.1.json  initializes_as_draft_then_activates.1.json  multi_cycle_rotates_payouts_and_returns_collateral_after_final_round.1.json  no_vote_resets_dissolution_to_active.1.json  payout_blocked_until_all_contribute.1.json  slashed_collateral_stays_in_pool_and_is_not_refunded.1.json  unanimous_dissolution_fairly_settles_collateral.1.json
scripts/: deploy-contract.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/auth/: actions.ts
src/components/: ConnectWalletButton.tsx
src/config/: stellar.ts
src/lib/: auth-shared.ts  auth.ts  calendar.ts  circulo.ts  date.ts  env.server.ts  env.ts  policies.ts  stellar-amount.ts  stellar-testnet.ts  time-zone.ts
src/services/: contractService.ts  dissolutionService.ts
src/utils/: anchor.ts  currency.ts
supabase/: seed.sql
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260708000000_add_auth_profiles.sql  20260708001000_add_dashboard_circles.sql  20260709_add_policy_fields.sql  20260713000000_add_user_id_and_invites.sql  (+16 more)
(+171 files in other folders)
